--- a/artistportfolio/gallery/templates/gallery.html
+++ b/artistportfolio/gallery/templates/gallery.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    {% for image in gallery %}
-        <img src={{image.image}}>
+    {% for image in images %}
+        <img src="{{image.image.url}}">
     {% endfor %}
 </body>
 </html>
