--- a/artistportfolio/gallery/templates/gallery.html
+++ b/artistportfolio/gallery/templates/gallery.html
@@ -1,14 +1,16 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <title>{{ gallery_name }}</title>
+    <link rel="stylesheet" href="{% static 'gallery/css/gallery.css' %}"> 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     {% for image in images %}
-        <img src="{{image.image.url}}">
+        <img class="gallery-image" src="{{image.image.url}}">
     {% endfor %}
 </body>
 </html>
